--- a/history.txt
+++ b/history.txt
@@ -69,4 +69,18 @@ make
 
 Цей CMakeLists.txt файл готовий для використання та може бути легко розширений у майбутньому, якщо ви додасте більше файлів або бібліотек до проекту.
 
-------------------------------
+-------------------------------
+
+--= Запити до третього етапу =--
+
+Створи функцію int add(int a, int b) в math_operations.h та math_operations.cpp
+
+Створи юніт тести в unit_tests.cpp для math_opperaions
+
+Створи юніт тести в unit_tests.cpp для math_opperaions за допомогою фреймворку Google Test.
+
+Додай підтримку Google Test у CMakeLists.txt. Додайте інструкції для створення тестового виконуваного файлу та запуску тестів. Перевіриш ще раз чи запускається юніт тест
+
+додайте інструкції для створення тестового виконуваного файлу та запуску тестів
+
+-------------------------------
