--- a/history.txt
+++ b/history.txt
@@ -69,7 +69,7 @@ make
 
 Цей CMakeLists.txt файл готовий для використання та може бути легко розширений у майбутньому, якщо ви додасте більше файлів або бібліотек до проекту.
 
--------------------------------
+--------------------------------
 
 --= Запити до третього етапу =--
 
@@ -83,4 +83,18 @@ make
 
 додайте інструкції для створення тестового виконуваного файлу та запуску тестів
 
--------------------------------
+----------------------------------
+
+--= Запити до четвертого етапу =--
+
+Згенеруй команди в ci.sh та ci.cmd, а саме:
+○ Створення каталогу білдування (mkdir build).
+○ Перехід у каталог (cd build).
+○ Конфігурування проекту за допомогою CMake (cmake ..).
+○ Білдування проєкту (cmake --build .).
+○ Забезпечте права на виконання (chmod +x build.sh) та зафіксуйте
+зміни.
+○ Створіть крок, який запускає тести за допомогою CTest (частина CMake), і переконайтеся, що він виконується на всіх трьох ОС:
+Головне не коміть!
+
+----------------------------------
