--- a/history.txt
+++ b/history.txt
@@ -97,4 +97,23 @@ make
 ○ Створіть крок, який запускає тести за допомогою CTest (частина CMake), і переконайтеся, що він виконується на всіх трьох ОС:
 Головне не коміть!
 
-----------------------------------
+------------------------------
+
+--= Запити до Пятого етапу =--
+
+У файлі ci.yml згенеруй робочий процес (workflow) з наступними вимогами:
+  ○ Trigger: Запускати акцію при push або pull request у гілку, що містить в
+    назві develop чи master .
+  ○ Job: Створити одну Job (наприклад, cross_build).
+  ○ Strategy: Використати матрицю (strategy: matrix) для запуску білду
+    на трьох ОС:
+    ■ runs-on: ubuntu-latest (Linux)
+    ■ runs-on: windows-latest (Windows)
+    ■ runs-on: macos-latest (macOS)
+  ○ Steps: Кожен білд повинен включати кроки:
+    ■ Checkout коду (actions/checkout@v4).
+    ■ Встановлення CMake (якщо потрібно).
+    ■ Запуск команд конфігурації та білдування (запуск скрипту з Етапу 3).
+    ■ Deploy
+
+------------------------------
